# happy-plugin-template

./: .gitignore  CMakeLists.txt  README.md  bunfig.toml  components.json  package.json  tsconfig.json
dsp/include/: editor.h  parameter.hpp  processor.h  util.hpp
dsp/src/: editor.cpp  processor.cpp
script/: DownloadWebView2.ps1  build.ts
view/: index.html  index.tsx
view/component/app/: buttons.tsx  controls.tsx  index.tsx  info.tsx  meter.tsx
view/component/ui/: button.tsx  combo.tsx  command.tsx  dialog.tsx  label.tsx  popover.tsx  progress.tsx  separator.tsx  slider.tsx  switch.tsx  table.tsx
view/store/: cnt.ts  meter.ts
view/util/: cn.ts  props.ts
